--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Calos Liu",
   "license": "MIT",
   "files": [
-    "build/",
+    "lib/",
     "bin/"
   ],
   "dependencies": {
@@ -26,13 +26,15 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
     "prettier": "1.19.1",
+    "sinon": "^8.1.1",
     "ts-jest": "^25.2.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
     "test": "jest",
     "clean": "rm -rf lib/",
-    "build": "tsc"
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "repository": {
     "type": "git",
