--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bin/"
   ],
   "dependencies": {
-    "commander": "^4.0.1"
+    "commander": "^4.0.1",
+    "ramda": "^0.27.0"
   },
   "devDependencies": {
     "@types/jest": "^25.1.2",
     "@types/node": "^12.12.21",
+    "@types/ramda": "^0.26.43",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
@@ -26,7 +28,6 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
     "prettier": "1.19.1",
-    "sinon": "^8.1.1",
     "ts-jest": "^25.2.0",
     "typescript": "^3.7.5"
   },
